# teane

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  windows-compliance.md
.github/workflows/: ci.yml  ci.yml.disabled
config/: config.json  config.json.example  config_help.md  deployment.json.example
docs/: BUG_REPORT.md  EDGE_CASE_AUDIT.md  PRODUCTION_READINESS.md  RUNBOOK.md  SPEC_ARCHITECTURE.md  SPEC_REQUIREMENTS.md  THREAT_MODEL.md  app-deployment.md  finsearch_run_issues.md  installation.md  production-readiness-audit.md
docs/adr/: ADR-0001-test-author-regeneration-for-unsatisfiable-tests.md  ADR-0002-generation-side-contradiction-prevention.md  ADR-0003-hybrid-deterministic-llm-test-generation.md
evals/: README.md  baseline.json  compare.py  golden_set.yaml  run_eval.py
evals/fixtures/add_logging/: service.py  test_service.py
evals/fixtures/add_pagination/: Makefile  pyproject.toml
evals/fixtures/add_pagination/app/: __init__.py  routes.py
evals/fixtures/add_pagination/tests/: test_routes.py
evals/fixtures/dep_manifest_coherence/: pyproject.toml
evals/fixtures/dep_manifest_coherence/src/widgets/: __init__.py  core.py
evals/fixtures/dep_manifest_coherence/tests/: test_widgets.py
evals/fixtures/fix_import_cycle/: pyproject.toml
evals/fixtures/fix_import_cycle/pkg/: a.py  b.py
evals/fixtures/fix_import_cycle/tests/: test_pkg.py
evals/fixtures/fix_missing_error_handling/: pyproject.toml
evals/fixtures/fix_missing_error_handling/app/: routes.py
evals/fixtures/fix_missing_error_handling/tests/: test_routes.py
evals/fixtures/fix_off_by_one/: Makefile  buggy.py  test_buggy.py
harness/: __init__.py  _filelock.py  _platform.py  arch_summary.py  architecture_inventory.py  autofix.py  batch_sizing.py  best_of_n.py  best_of_n_runner.py  chat.py  cli.json  cli.py  config_tree.py  contract_tests.py  contract_tests_react.py  dashboard.py  dashboard_runlike.py  dashboard_v5views.py  decomposition.py  deploy.py  diagnostics_gate.py  diff_render.py  docgen_prompts.py  error_explain.py  fanout.py  gap_fill.py  gateway.py  github_integration.py  graph.py  hitl.py  impact.py  lintgate.py  loop_counter_keys.py  lsp_client.py  mcp_client.py  metrics.py  model_prices.json  observability.py  parser_registry.py  patch_feedback.py  (+39 more)
harness/pytest_plugins/: teane_diagnostics.py
harness/skills/: agent-standards.md  makefile_node.md  makefile_python.md  makefile_static_web.md  unit_tests_python.md  unit_tests_react.md  web-app-assets.md
harness/skills/docgen/: arch_doc.md  architecture_discovery.md  architecture_discovery_followup.md  requirements_discovery.md  requirements_discovery_followup.md  requirements_doc.md
harness/static/css/: app.css  tokens.css
harness/static/fonts/: README.txt
harness/static/js/: dashboard.js
harness/static/templates/: starter-fastapi-notes.json  starter-flask-todo.json  starter-static-site.json
harness/style_guides/: python.md  typescript.md
harness/test_guides/: javascript.md  python.md  typescript.md
scripts/: release.py  setup.py  tail_log.sh
tests/: conftest.py  test_arch_summary.py  test_architecture_inventory.py  test_audit_cli_helpers.py  test_audit_graph_helpers.py  test_audit_trust.py  test_autofix.py  test_autofix_deps_not_installed.py  test_autofix_missing_init_py.py  test_autofix_pyproject.py  test_batch_commit_node.py  test_batch_gate_progress.py  test_batch_topo_order.py  test_best_of_n.py  test_best_of_n_runner.py  test_change_requests.py  test_cheap_shots_escalation.py  test_cli_basics.py  test_cli_exit_codes.py  test_cli_log_guard.py  test_cli_web_start_stop.py  test_cmd_purge_all.py  test_collection_carveout.py  test_colocated_test_guard.py  test_compaction.py  test_config_env_expansion.py  test_config_throttle_promotions.py  test_config_tree.py  test_contract_tests.py  test_contract_tests_react.py  test_contradiction.py  test_coverage_config.py  test_cross_round_context.py  test_dashboard.py  test_dashboard_activity_feed.py  test_dashboard_app.py  test_dashboard_hitl_polish.py  test_dashboard_home_route.py  test_dashboard_mobile.py  test_dashboard_overhaul.py  (+135 more)
