[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-harness"
version = "1.0.0"
description = "Production-grade, model-agnostic AI Agent Harness with LangGraph orchestration, sandboxed builds, and bulletproof persistence."
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "AI Agent Harness Team" }
]
dependencies = [
    "langgraph>=0.4.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "aiofiles>=24.0.0",
    "tree-sitter>=0.23.0",
    # tree-sitter-language-pack bundles grammars for 165+ languages in a
    # single wheel, including Python, JavaScript, TypeScript, TSX, Java,
    # Go, Rust, Dart, Swift, etc. Using one package avoids dependency
    # churn from upgrading 6+ individual grammar packages and gives us
    # Dart coverage (which doesn't have a standalone PyPI distribution).
    "tree-sitter-language-pack>=1.8.0",
    "httpx>=0.28.0",
    "uuid7>=0.1.0",
    "typing-extensions>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    # Coverage reporting consumed by `make coverage`. We deliberately don't
    # gate CI on a minimum coverage number (yet) — the metric is for
    # visibility, not a wall. The shipped target emits a terminal summary
    # plus an HTML report under htmlcov/.
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=3.7.0",
    # Required by tests/test_harness.py to construct LangGraph checkpoint
    # blobs for the GC regression test. The runtime code in storage.py
    # treats msgpack as optional and falls back to JSON if it's absent,
    # but the test needs to encode a backdated 'ts' inside the blob.
    "msgpack>=1.0.0",
]

[project.scripts]
harness = "harness.cli:main"

[tool.setuptools.packages.find]
include = ["harness*"]

[tool.setuptools.package-data]
harness = [
    "cli.json",
    "model_prices.json",
    # Web UI static assets: CSS, JS, icon sprite, favicon, fonts. These
    # are served by `harness web` from harness/static/ (or operator-
    # overridden via dashboard.static_dir). Wheels must include them
    # so an offline install renders the styled UI without a CDN hit.
    "static/css/*.css",
    "static/js/*.js",
    "static/icons/*.svg",
    "static/fonts/*",
    "static/*.ico",
    "static/*.png",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
# Collect tests only from the tests/ directory so source modules whose
# filenames happen to start with `test_` (e.g. harness/test_generation.py,
# the auto-test-gen graph node) are not picked up as test files.
testpaths = ["tests"]

[tool.coverage.run]
# Source we want to measure. Excludes the test pack itself (we measure
# the production code, not the tests) and vendored grammars / wheels.
source = ["harness"]
omit = [
    "harness/vendor/*",
    "harness/skills/*",   # markdown style guides, no Python
    "harness/test_generation.py",  # confusingly-named module, not a test
]
# Background async tasks (gateway retries, MCP reader loops, etc.) make
# concurrent reports unreliable without the multiprocessing concurrency
# tracker.
concurrency = ["thread"]

[tool.coverage.report]
# Skip the summary printout for files where we'd otherwise count
# completely-unimported modules (e.g. a future provider class that no
# test exercises yet). Keeps the % meaningful.
skip_covered = false
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = false
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = false
