[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "add-pagination"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = ["flask>=3.0"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["app*"]
